--- a/webstrom项目/移动端/轮播图/index.html
+++ b/webstrom项目/移动端/轮播图/index.html
@@ -17,7 +17,6 @@
 
         .wrap_content {
             width: 100%;
-            height: 1000px;
             position: relative;
         }
 
@@ -178,7 +177,7 @@
             }
             window.addEventListener('load', function () {
                 //设置高度
-                //   oWrap_content.style.height=oPic[0].offsetHeight+"px";
+                  oWrap_content.style.height=oPic[0].offsetHeight+"px";
                 //点的设置
                 for (var i = 0; i < len; i++) {
                     var span = document.createElement("span");
